--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,14 @@ captures/
 
 # IntelliJ
 *.iml
+.gradle
+/local.properties
+/.idea/
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+/buildSrc/build/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
