--- a/TestApp/app/src/main/AndroidManifest.xml
+++ b/TestApp/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="UI.LoginActivity">
+        <activity android:name="ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UI.BaseActivity" />
-        <activity android:name=".UI.LoginActivity" />
-        <activity android:name=".UI.MovieActivity" />
+        <activity android:name=".base.BaseActivity" />
+        <activity android:name=".ui.MovieActivity" />
     </application>
 
 </manifest>
